# Mazes

./: .gitignore  LICENSE  main.py  maze_animator_pygame.py  maze_generator.py  maze_renderer.py  maze_renderer_pygame.py  maze_solver.py  rebuild.txt
animation/: animator_pygame.py
api/: app.py
frontend/: app.js  canvas.js  components.js  constants.js  index.html  styles.css
generation/: maze_generator.py
rendering/: renderer_ascii.py  renderer_pygame.py
robot/: hal.py  state.py  wall_follower.py
robot_cpp/: CMakeLists.txt  bindings.cpp
robot_cpp/include/: flood_fill.hpp  hal.hpp  state.hpp  wall_follower.hpp
robot_cpp/src/: flood_fill.cpp  state.cpp  wall_follower.cpp
simulation/: hal_sim.py  sim_state.py
solving/: solver_dijkstra.py
